--- a/LaTeX report/main.tex
+++ b/LaTeX report/main.tex
@@ -4,6 +4,9 @@
 \usepackage{hyperref} % Provides clickable links. Always load last, but before cleveref.
 
 \usepackage{amsmath}
+\usepackage{bm}
+\usepackage{todonotes}
+\usepackage{cleveref}
 
 %% To easily include matlab code, I would recommend to have a look at this answer https://tex.stackexchange.com/a/158816 which has nice examples.
 
@@ -13,7 +16,7 @@
 
 % Titlepage
 \title{LaTeX Lab Report Skeleton}
-\author{Group 00\\Student 70000\\Student 70001}
+\author{Group ??\\Vemund Rogne\\Jørgen Haaland}
 \date{January 1, 1970}
 \begin{titlepage}
     \maketitle
