Add report comment on discretized stability condition

--- a/LaTeX report/task_10_2.tex
+++ b/LaTeX report/task_10_2.tex
@@ -85,6 +85,7 @@ The stability condition for \cref{eq:lab2_discrete_system} is:
 \begin{equation}\label{eq:lab2_stab_condition}
 	|1 + T \lambda| \leq 1
 \end{equation}, where $ \lambda $ is an eigenvalue of $ \bm A $ in \cref{eq:lab2_discrete_system}. 
+\todo{Where is this equation from? I believe that it works, but we should either derive it or reference where we found it.}
 Using MATLAB we found the eigenvalues of $ \bm A $ to be ... \todo[inline]{Add Matlab appendix}
 \todo[inline]{find eigenvalues}
 
