Fix equations in latex report

--- a/LaTeX report/task_10_2.tex
+++ b/LaTeX report/task_10_2.tex
@@ -54,7 +54,7 @@ The properties of this system is dependent on physical constants ($l_a, J_t, ...
 
 Symbolic expressions in Matlab shows that the eigenvalues of A are:
 \begin{equation}
-	\lambda = \pm \frac{1}{2} \times \left( \sqrt{-K1 \times (-K1*K_{pd}^2 + 4*Kpp)} - K1*K_{pd} \right)
+	\lambda = \pm \frac{1}{2} \left( \sqrt{-K_1 (-K_1 K_{pd}^2 + 4  K_{pp})} - K_1  K_{pd} \right)
 \end{equation}
 
 The eigenvalues of the continous model, with $K_{pp} = 0,1 , K_{pd} = 0,4$ are:
