Add preamble.sty to simplify main.tex

--- a/LaTeX report/main.tex
+++ b/LaTeX report/main.tex
@@ -1,12 +1,5 @@
-\documentclass[11pt, a4paper, USenglish]{article} % change ``USenglish'' to ``norsk'' if applicable.
-
-\usepackage{graphicx} % Provides the \includegraphics command.
-\usepackage{hyperref} % Provides clickable links. Always load last, but before cleveref.
-
-\usepackage{amsmath}
-\usepackage{bm}
-\usepackage{todonotes}
-\usepackage{cleveref}
+\documentclass{article} % change ``USenglish'' to ``norsk'' if applicable.
+\usepackage{preamble}
 
 %% To easily include matlab code, I would recommend to have a look at this answer https://tex.stackexchange.com/a/158816 which has nice examples.
 
