Add LaTeX listings package for matlab code

--- a/LaTeX report/preamble.sty
+++ b/LaTeX report/preamble.sty
@@ -5,11 +5,16 @@
 \usepackage{parskip}
 
 \usepackage{subfiles}
+\usepackage{pdfpages}
 
 \usepackage{todonotes}
 
 \usepackage{amsmath}
 \usepackage{bm}
+
+\usepackage[numbered, framed]{matlab-prettifier}
+\usepackage{listings}
+\lstset{style=Matlab-editor}
 
 \usepackage{booktabs}
 \usepackage{array}
