Add method and example of exporting plots from python to LaTeX
Reference: https://timodenk.com/blog/exporting-matplotlib-plots-to-latex/

We are using pgf files, giving us vector-graphics as well as latex fonts in the plots

--- a/LaTeX report/main.tex
+++ b/LaTeX report/main.tex
@@ -35,7 +35,11 @@
 \include{task_10_3}
 \include{task_10_4}
 
-
+\begin{figure}
+    \begin{center}
+        \input{../test_figure.pgf}
+    \end{center}
+\end{figure}
 
 % References
 \newpage
