--- a/LaTeX report/preamble.sty
+++ b/LaTeX report/preamble.sty
@@ -15,6 +15,7 @@
 \usepackage[numbered, framed]{matlab-prettifier}
 \usepackage{listings}
 \lstset{style=Matlab-editor}
+\usepackage{pgfplots}
 
 \usepackage{booktabs}
 \usepackage{array}
