Reconfigure latex project
The changes are:
1. Move content from root to content/
2. Use subfiles
3. Add vscode settings to hide build artifacts

1. This is to keep the project clean and make it easier to find content
2. Subfiles allows us to build chapters at a time, keeping build-times
low.
3. vscode settings to hide .aux, .bbl, .blg, and more.

--- a/LaTeX report/content/task_10_2.tex
+++ b/LaTeX report/content/task_10_2.tex
@@ -1,4 +1,8 @@
-\section{10.2 - Optimal Control of Pitch/Travel without Feedback }
+\documentclass[../main.tex]{subfiles}
+
+\begin{document}
+
+\section{10.2 - Optimal Control of Pitch/Travel without Feedback}
 
 \subsection{Derivation of a continous time state space model}
 In this part of the exercise we will disregard elevation, therefore we assume $ e = 0 $ and do include it in the model.
@@ -113,16 +117,4 @@ Answer 10.2.2.7 here.}
 \subsection{MATLAB and Simulink}
 \textit{Code and diagrams go here}
 	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	 
-	
+\end{document}
