--- a/LaTeX report/content/task_10_4.tex
+++ b/LaTeX report/content/task_10_4.tex
@@ -1,3 +1,6 @@
+\documentclass[../main.tex]{subfiles}
+
+\begin{document}
 \section{10.4 - Optimal Control of Pitch/Travel and Elevation with Feedback}
 
 \subsection{The continuous model}
@@ -19,17 +22,4 @@ Answer 10.4.2.6 here.}
 
 \subsection{Optional exercise}
 \textit{Which constraints did you add? What was the results? Plots? Discussion?}
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	 
-	
+\end{document}
