--- a/LaTeX report/content/task_10_3.tex
+++ b/LaTeX report/content/task_10_3.tex
@@ -1,3 +1,6 @@
+\documentclass[main.tex]{subfiles}
+
+\begin{document}
 \section{10.3 - Optimal Control of Pitch/Travel with Feedback (LQ)}
 
 \subsection{LQ controller}
@@ -13,4 +16,4 @@ Answer 10.3.2.5 here.}
 
 \subsection{MATLAB and Simulink}
 \textit{Code and diagrams go here}
-	
+\end{document}
