Add Foss&Heirung to bibliography

--- a/LaTeX report/bibliography.bib
+++ b/LaTeX report/bibliography.bib
@@ -10,8 +10,6 @@
   note = {Accessed: 2017-02-13}
 }
 
-
-
 @book{Nocedal2006,
 author = {Nocedal, J. and Wright, S. J.},
 edition = {second},
@@ -19,3 +17,12 @@ publisher = {Springer},
 title = {{Numerical Optimization}},
 year = {2006}
 }
+
+
+@book{FossHeirung,
+  author = "Bjarne Foss and Tor Aksel N. Heirung",
+  title = "Merging optimization and control",
+  year = "2016"
+}
+
+
