Fixed main.tex path in subfile 10_3.tex

--- a/LaTeX report/content/task_10_3.tex
+++ b/LaTeX report/content/task_10_3.tex
@@ -1,4 +1,4 @@
-\documentclass[main.tex]{subfiles}
+\documentclass[../main.tex]{subfiles}
 
 \begin{document}
 \section{10.3 - Optimal Control of Pitch/Travel with Feedback (LQ)}
