Removed original section numbers in our sections
For instance "10.2 - Optimal control of Pitch [...]" is now:
"Optimal Control of Pitch [...]".

This makes our text much cleaner and easier to read, especially
removing confusion about what are the actual section numbers.

--- a/LaTeX report/content/task_10_2.tex
+++ b/LaTeX report/content/task_10_2.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
 
-\section{10.2 - Optimal Control of Pitch/Travel without Feedback}
+\section{Optimal Control of Pitch/Travel without Feedback}\label{kap:Part2OptimalControlWithoutFeedback}
 
 \subsection{Derivation of a continous time state space model}
 In this part of the exercise we will disregard elevation, therefore we assume $ e = 0 $ and do include it in the model.
