--- a/LaTeX report/content/task_10_3.tex
+++ b/LaTeX report/content/task_10_3.tex
@@ -1,10 +1,19 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-\section{10.3 - Optimal Control of Pitch/Travel with Feedback (LQ)}
+\section{Optimal Control of Pitch/Travel with Feedback (LQ)}
+In this task we add feedback to the optimal controller that we developed in \cref{kap:Part2OptimalControlWithoutFeedback}
 
 \subsection{LQ controller}
 \textit{Briefly explain LQ controller. Especially, but not limited to, what is the role of the matrices Q and R? Justify your choice of weights.}
+
+An LQ, or linear-quadratic, regulator is an optimal feedback controller that can be applied to a linear model $\Delta x=A\Delta x_i + B \Delta u_i$ with a quadratic cost function:
+\begin{equation}
+    J = \sum^\infty_{i=0} \Delta x_{i+1}^\top Q \Delta x_{i+1} + \Delta u_i^\top R \Delta u_i, \quad Q \ge0, \quad R > 0
+\end{equation}
+Here $ \Delta x = x - x^*$ and $\Delta u = u - u^*$ are deviations from the optimal trajectory.
+
+The matrix $Q$ and the scalar $R$ are weights in the optimalization problem. The value of $Q$ determines how much deviation in the state value should be penalized, while the value of $R$ determines how much input-usage should be punished. This allows the designer to optimize the regulator to the specific implementation: A system where the input is cheap (like the helicopter used in this assignment) would have a relatively small value of $R$ compared to $Q$.
 
 \subsection{Model Predictive Control}
 \textit{Answer 10.3.1.3 here.}
