--- a/LaTeX report/content/task_10_2.tex
+++ b/LaTeX report/content/task_10_2.tex
@@ -212,4 +212,11 @@ Answer 10.2.2.7 here.}
 \subsubsection{MATLAB}
 \lstinputlisting[caption= {MATALB code for lab 2}]{code/lab2.m}
 \subsubsection{Simulink}
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\linewidth]{code/lab2_simulink}
+	\caption{Simulink diagram used in lab 2.}
+	\label{fig:lab2_simulink}
+\end{figure}
+\todo[inline]{Need a much better image of this.}
 \end{document}
