--- a/LaTeX report/preamble.sty
+++ b/LaTeX report/preamble.sty
@@ -10,6 +10,7 @@
 \usepackage{todonotes}
 
 \usepackage{amsmath}
+\numberwithin{equation}{section}
 \usepackage{bm}
 
 \usepackage[numbered, framed]{matlab-prettifier}
