Update main.tex and main.pdf with LAB3 plots

--- a/LaTeX report/main.tex
+++ b/LaTeX report/main.tex
@@ -27,7 +27,7 @@
 
 \begin{figure}
     \begin{center}
-        \input{../test_figure.pgf}
+        \input{figures/LAB3_R_variations.pgf}
     \end{center}
 \end{figure}
 
