--- a/LaTeX report/main.tex
+++ b/LaTeX report/main.tex
@@ -31,6 +31,14 @@
     \end{center}
 \end{figure}
 
+\clearpage
+
+\begin{figure}
+    \begin{center}
+        \input{figures/LAB3_Q_variations.pgf}
+    \end{center}
+\end{figure}
+
 
 % References
 \newpage
